Fixed misaligned icons
On the panel with mute, deafen, and settings the icons were a little too high, so I moved them down a little.

--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -23,6 +23,7 @@
 		border-radius: 0;
 		transition: none;
 		cursor: var(--cursor);
+		padding-top: 3px;
 		svg {
 			height: 16px;
 			color: var(--text-normal);
